# The-Answer-Protocol

./: Cargo.toml  README.md  exemple.json
.cargo/: config.toml
data/: test.json  world.json
data/maps/: new.json  test.json
src/: lib.rs
src/cli/: cli.rs  friendly.rs  handler.rs  input.rs  logger.rs  message.rs  messages.rs  mod.rs  raw.rs  state.rs  terminal.rs  waiter.rs  wrapper.rs
src/game/: combat.rs  direction.rs  game.rs  group.rs  item.rs  mod.rs  npc.rs  player.rs  quest.rs  room.rs  state.rs  trade.rs  world.rs
src/gui/: interface.rs  mod.rs
src/messages/: command.rs  error.rs  event.rs  message.rs  mod.rs  payload.rs  response.rs  utils.rs
src/network/: client.rs  mod.rs  server.rs
src/tui/: button.rs  buttons.rs  chat.rs  color.rs  describe.rs  focusable.rs  group.rs  header.rs  input.rs  knowledge.rs  list.rs  mod.rs  notebook.rs  popup.rs  quests.rs  room.rs  scrollbar.rs  stats.rs  terminal.rs  welcome.rs  widget.rs
src/utils/: flood.rs  func.rs  mod.rs  shared.rs  sleeper.rs  waiter.rs
