[package]
name = "tap"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dict = "0.1.5"
eframe = "0.35.0"
futures = "0.3"
rand = "0.9"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
